templates/uptrace_template.yaml
---
# Source: uptrace/templates/clickhouse-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptrace-clickhouse
  labels:
    app: clickhouse
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 8123
      targetPort: http
      protocol: TCP
      name: http
    - port: 9000
      targetPort: tcp
      protocol: TCP
      name: tcp
  selector:
    app: clickhouse
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
---
# Source: uptrace/templates/postgresql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: uptrace-postgresql
  labels:
    app: postgresql
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 5432
      targetPort: tcp
      protocol: TCP
      name: tcp
  selector:
    app: postgresql
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
---
# Source: uptrace/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-uptrace
  labels:
    app: uptrace
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
  annotations:

spec:
  type: ClusterIP
  ports:
    - port: 14318
      targetPort: http
      protocol: TCP
      name: http
    - port: 14317
      targetPort: grpc
      protocol: TCP
      name: grpc
  selector:
    app: uptrace
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
---
# Source: uptrace/templates/otelcol-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: otelcontribcol
  labels:
    app: otelcontribcol
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: otelcontribcol
      app.kubernetes.io/name: uptrace
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: otelcontribcol
        app.kubernetes.io/name: uptrace
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: otelcontribcol
      containers:
        - name: otelcontribcol
          image: otel/opentelemetry-collector-contrib
          args: ['--config', '/etc/config/config.yaml']
          volumeMounts:
            - name: config
              mountPath: /etc/config
          imagePullPolicy: IfNotPresent
      volumes:
        - name: config
          configMap:
            name: otelcontribcol
---
# Source: uptrace/templates/clickhouse-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptrace-clickhouse
  labels:
    app: clickhouse
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: uptrace-clickhouse
  selector:
    matchLabels:
      app: clickhouse
      app.kubernetes.io/name: uptrace
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: clickhouse
        app.kubernetes.io/name: uptrace
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-uptrace
      securityContext:
        {}
      containers:
        - name: uptrace
          securityContext:
            {}
          image: "clickhouse/clickhouse-server:23.11"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: uptrace-clickhouse-data
            mountPath: /var/lib/clickhouse
          ports:
            - name: http
              containerPort: 8123
              protocol: TCP
            - name: tcp
              containerPort: 9000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          resources:
            {}
      volumes: []

  volumeClaimTemplates:
  - metadata:
      name: uptrace-clickhouse-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
---
# Source: uptrace/templates/postgresql-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: uptrace-postgresql
  labels:
    app: postgresql
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: uptrace-postgresql
  selector:
    matchLabels:
      app: postgresql
      app.kubernetes.io/name: uptrace
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      labels:
        app: postgresql
        app.kubernetes.io/name: uptrace
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-uptrace
      securityContext:
        {}
      containers:
        - name: uptrace
          securityContext:
            {}
          image: "postgres:15-alpine"
          imagePullPolicy: IfNotPresent
          volumeMounts:
          - name: uptrace-postgresql-data
            mountPath: /var/lib/postgresql/data
          ports:
            - name: tcp
              containerPort: 5432
              protocol: TCP
          livenessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
            failureThreshold: 6
            initialDelaySeconds: 30
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command:
                - /bin/sh
                - -c
                - -e
                - |
                  exec pg_isready -U "postgres" -h 127.0.0.1 -p 5432
                  [ -f /opt/bitnami/postgresql/tmp/.initialized ] || [ -f /bitnami/postgresql/.initialized ]
            failureThreshold: 6
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            {}
      volumes: []

  volumeClaimTemplates:
  - metadata:
      name: uptrace-postgresql-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 8Gi
---
# Source: uptrace/templates/uptrace-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: release-name-uptrace
  labels:
    app: uptrace
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  serviceName: release-name-uptrace
  selector:
    matchLabels:
      app: uptrace
      app.kubernetes.io/name: uptrace
      app.kubernetes.io/instance: release-name
  template:
    metadata:
      annotations:
        checksum/config: f47b1ddf33389bb1fd83a05d175dde19438e2a5fbbc518e63eff483464c9ee6d
        sidecar.opentelemetry.io/inject: 'true'
      labels:
        app: uptrace
        app.kubernetes.io/name: uptrace
        app.kubernetes.io/instance: release-name
    spec:
      serviceAccountName: release-name-uptrace
      securityContext:
        {}
      containers:
        - name: uptrace
          securityContext:
            {}
          image: "uptrace/uptrace:1.7.0"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: config
              mountPath: /etc/uptrace/uptrace.yml
              subPath: uptrace.yml
          ports:
            - name: http
              containerPort: 14318
              protocol: TCP
            - name: grpc
              containerPort: 14317
              protocol: TCP
          
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          
          resources:
            {}
      volumes:
        - name: config
          configMap:
            name: release-name-uptrace
---
# Source: uptrace/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-uptrace
  labels:
    helm.sh/chart: uptrace-1.7.4
    app.kubernetes.io/name: uptrace
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "1.7.4"
    app.kubernetes.io/managed-by: Helm
spec:
  rules:
    - host: "uptrace.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-uptrace
                port:
                  number: 14318
